# stable-diffusion-test

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: main.py
src/classes/: BuildingConfig.py
src/dataset/: BuildingDatasetGenerator.py  DatasetInspector.py  utils.py
src/dataset/training_data_20250119_231048/: metadata.json  voxels.npy
src/notebooks/: basic_training.ipynb  buildings_3d.ipynb
src/renderer/: Renderer.py  World.py  materials.py
src/renderer/objects/: Building.py  Church.py  Shop.py  Tower.py
src/renderer/utils/: City.py
